_sass/_junkdrawer.scss
.wrapper {
  @extend %u-wrap;
}

.button {
  display: inline-block;
  margin-bottom: 1rem;
  padding: 0.5rem 1rem;
  color: #fff;
  font-size: 1rem;
  white-space: nowrap;
  text-decoration: none;
  vertical-align: middle;
  background-color: $color-link;
  border: $border-thick solid $color-link;
  border-radius: 0.5rem;
  box-shadow: 0;

  &:link,
  &:visited {
    color: #fff;
    text-decoration: none;
  }

  &:hover,
  &:focus {
    text-decoration: none;
    background-color: $color-link-hover;
    border-color: $color-link-hover;
  }

  &:focus {
    color: $color-text-body;
    text-decoration: none;
    background-color: $color-highlight;
    border: $border-thick solid $color-text-body;
    outline: $border-thick solid transparent;
    outline-offset: 0;
    box-shadow: none;
  }
}

.svg-icon {
  width: 1rem;
  height: 1rem;
  color: $color-text-accent;
}

.skip {
  position: absolute;
  left: -999rem;

  &:active,
  &:focus {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 100;
    display: block;
    padding: 0.5rem 0.75rem;
  }
}

.site-footer {
  margin-top: 3rem;
  padding-top: 3rem;
  padding-bottom: 3rem;
  color: $color-barely;
  background-color: $color-darkest;

  .svg-icon {
    color: $color-border;
  }

  a {
    &:link,
    &:visited {
      color: $color-border;
      text-decoration: none;
    }

    &:hover {
      color: #fff;

      .svg-icon {
        color: #fff;
      }
    }

    &:focus {
      color: $color-text-body;
      text-decoration: none;
      background-color: $color-highlight;
      outline: $border-thick solid transparent;
      outline-offset: 0;
      box-shadow: 0 -0.125rem $color-highlight, 0 0.25rem $color-text-body;

      .svg-icon {
        color: $color-text-body;
      }
    }
  }

  .site-footer-logo a {
    font-weight: $font-weight-black;
  }
}

.social-media-list {
  @extend %unlist;
  a {
    display: inline-block;
    margin-bottom: 0.25rem;
  }

  .svg-icon {
    margin-right: 0.25rem;
  }
}

.social-links {
  margin-bottom: 1rem;
}

.site-header {
  padding: 2rem 0;

  .wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  :link,
  :visited {
    text-decoration: none;
  }
}

.site-menu-button {
  width: 1.75rem;
  height: 1.75rem;
  padding: 0;
  background: transparent;
  border: none;
  cursor: pointer;
  -webkit-appearance: none; // stylelint-disable-line

  svg {
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
  }

  &:hover {
    svg {
      stroke: $color-link;
    }
  }

  &:focus {
    color: $color-text-body;
    text-decoration: none;
    background-color: $color-highlight;
    outline: $border-thick solid transparent;
    outline-offset: 0;
    box-shadow: 0 -0.125rem $color-highlight, 0 0.25rem $color-text-body;
  }
}

.site-menu {
  display: block;
  width: 100%;
  margin-top: 1rem;
  background: $color-barely;
  border-radius: 0.25rem;

  &[aria-hidden="true"] {
    display: none;
  }

  .page-link {
    display: block;
    width: 100%;
    padding: 0.5rem 1rem;
    border-bottom: $border-thin solid $color-white;
    &:last-child {
      border-bottom: 0;
    }
  }
}

.site-title {
  display: block;
  flex-shrink: 0;
  max-width: 100%;
  font-weight: $font-weight-black;
  letter-spacing: 0.125rem;
  text-transform: uppercase;

  &:hover {
    .site-title-icon {
      background-color: $color-link-hover;
    }
  }

  &:focus {
    .site-title-icon {
      background-color: $color-text-body;
    }
  }
}

.site-title-icon {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 1.75rem;
  height: 1.75rem;
  margin-right: 0.5rem;
  text-align: center;
  vertical-align: middle;
  background-color: $color-link;
  border-radius: 100%;
  svg {
    width: 1.25rem;
    height: 1.25rem;
    color: $color-barely;
  }
}

.post-header {
  margin-top: 1rem;
  margin-bottom: 1rem;

  .post-meta {
    margin-bottom: 0.25rem;
    color: $color-text-accent;
  }
}

.post-content {
  max-width: $content-max-width;
  margin: 0 auto;
}

.style-table {
  th {
    text-align: left;
  }

  td {
    padding: 0.5rem;
    border-bottom: $border-thin solid $color-border;
  }

  .fix {
    min-width: 15rem;
  }
}

.u-font-weight-light {
  font-weight: $font-weight-light;
}

.u-font-weight-regular {
  font-weight: $font-weight-regular;
}

.u-font-weight-medium {
  font-weight: $font-weight-medium;
}

.u-font-weight-bold {
  font-weight: $font-weight-bold;
}

.u-font-weight-black {
  font-weight: $font-weight-black;
}

.u-font-body {
  font-family: $font-body;
}

.u-font-body-fallback {
  font-family: $font-body-fallback;
}

.u-font-body-default {
  font-family: $font-body-default;
}

%u-line-height {
  display: block;
  text-align: center;
  background-color: $color-barely;
}

.u-line-height-reset {
  @extend %u-line-height;

  line-height: $line-height-reset;
}

.u-line-height-heading {
  @extend %u-line-height;

  line-height: $line-height-heading;
}

.u-line-height-text {
  @extend %u-line-height;

  line-height: $line-height-text;
}

%u-border {
  display: inline-block;
  padding: 0.5rem;
  border: $border-thin solid $color-border;
}

.u-border-thin {
  @extend %u-border;

  border: $border-thin solid $color-border;
}

.u-border-thick {
  @extend %u-border;

  border: $border-thick solid $color-border;
}

